# Arbisoft-week1

./: README.md  prompts.md  pyproject.toml  task1.ipynb  test_data_prep.py
